--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,29 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdn.jotfor.ms/s/umd/latest/for-embedded-agent.js"></script>
+<script src="https://cdn.jotfor.ms/s/umd/latest/for-embedded-agent.js"></script>
+<script>
+  window.addEventListener("DOMContentLoaded", function() {
+    window.AgentInitializer.init({
+      rootId: "JotformAgent-0197edc09cf97d5c86a32017a50d8ca5975c",
+      formID: "0197edc09cf97d5c86a32017a50d8ca5975c",
+      queryParams: ["skipWelcome=1", "maximizable=1"],
+      domain: "https:\/\/www.jotform.com",
+      isInitialOpen: false,
+      isDraggable: false,
+      background: "linear-gradient(180deg, #D3CBF4 0%, #D3CBF4 100%)",
+      buttonBackgroundColor: "#8797FF",
+      buttonIconColor: "#01091B",
+      variant: false,
+      customizations: {
+        greeting: "Yes",
+        greetingMessage: "Hi! How can I assist you?",
+        pulse: "Yes",
+        position: "right"
+      }
+    });
+  });
+</script>
 </body>
 </html>
